k8s/integrations/certs/dwbrite-com.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dwbrite-com-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP2
      hosts:
        - "dwbrite.com"
        - "*.dwbrite.com"
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "dwbrite.com"
        - "*.dwbrite.com"
      tls:
        mode: SIMPLE
        credentialName: dwbrite-com-tls
    - port:
        number: 9000
        name: minio_api
        protocol: HTTPS
      hosts:
        - "*.dwbrite.com"
      tls:
        mode: SIMPLE
        credentialName: dwbrite-com-tls
