k8s/integrations/certs/gametank-games.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gametank-games-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP2
      hosts:
        - "gametank.games"
        - "*.gametank.games"
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "gametank.games"
        - "*.gametank.games"
      tls:
        mode: SIMPLE
        credentialName: gametank-games-tls
