k8s/integrations/certs/tiny-pizza.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tiny-pizza-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP2
      hosts:
        - "tiny.pizza"
        - "*.tiny.pizza"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "tiny.pizza"
        - "*.tiny.pizza"
      tls:
        mode: SIMPLE
        credentialName: tiny-pizza-tls
    - port:
        number: 9000
        name: minio
        protocol: HTTPS
      hosts:
        - "*.tiny.pizza"
      tls:
        mode: SIMPLE
        credentialName: tiny-pizza-tls
    - port:
        number: 9090
        name: minio-console
        protocol: HTTPS
      hosts:
        - "*.tiny.pizza"
      tls:
        mode: SIMPLE
        credentialName: tiny-pizza-tls
    - port:
        number: 1337
        name: tcp-games
        protocol: TCP
      hosts:
        - "*.tiny.pizza"
